<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/i"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SqrActivity">

    <EditText
        android:id="@+id/editCoordY"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/CoordYSting"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/editDegree"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/DegreeString"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/editCoordX"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:hint="@string/CoordXHintString"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/CalcButton"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:onClick="calculate"
        android:text="@string/ButtonString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/Plus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/editTextHeight"
        android:text="@string/PlusString"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textI"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/editTextHeight"
        android:text="@string/iString"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textRo"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/textZ"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <TextView
        android:id="@+id/textArgZ"
        android:layout_width="@dimen/TextWidth"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="357dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:text="@string/Label1String"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editCoordX"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="343dp"
        android:layout_height="413dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/zs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>